--- a/facecheck-frontend/package.json
+++ b/facecheck-frontend/package.json
@@ -6,8 +6,9 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.14",
-    "@mui/material": "^5.14.14",
+    "@mui/material": "^5.15.3",
     "@mui/styles": "^5.14.14",
+    "@mui/x-data-grid": "^6.18.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,8 +17,11 @@
     "react": "^18.2.0",
     "react-cookie": "^7.0.1",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
+    "sweetalert2": "^11.10.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
