feat: 이미지 출력 - byte[] 반환

--- a/faceCheck-server/src/main/resources/application.properties
+++ b/faceCheck-server/src/main/resources/application.properties
@@ -1,2 +1,5 @@
 # MySQL Profile
 spring.profiles.include=mysql, jwt
+
+# ???? ??? ???? ?? ??
+image.upload.directory=/Users/yeonsu/IdeaProjects/faceCheck/img/
