--- a/facecheck-frontend-ts/package.json
+++ b/facecheck-frontend-ts/package.json
@@ -15,8 +15,9 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
-    "react-cookie": "^7.0.2",
+    "react-cookie": "^7.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scripts": "5.0.1",
@@ -49,7 +50,8 @@
     ]
   },
   "devDependencies": {
-    "@types/axios": "^0.14.0"
+    "@types/axios": "^0.14.0",
+    "@types/js-cookie": "^3.0.6"
   },
   "proxy": "http://localhost:8080"
 }
