--- a/facecheck-frontend-ts/package.json
+++ b/facecheck-frontend-ts/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
+    "blob": "^0.1.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-cookie": "^7.1.0",
