--- a/facecheck-frontend-ts/package.json
+++ b/facecheck-frontend-ts/package.json
@@ -8,7 +8,9 @@
     "@material-ui/core": "^4.12.4",
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.11",
+    "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.10",
+    "@mui/x-data-grid": "^7.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +20,7 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "blob": "^0.1.0",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-cookie": "^7.1.0",
