--- a/facecheck-frontend-ts/package.json
+++ b/facecheck-frontend-ts/package.json
@@ -11,6 +11,7 @@
     "@mui/lab": "^5.0.0-alpha.170",
     "@mui/material": "^5.15.10",
     "@mui/x-data-grid": "^7.3.2",
+    "@mui/x-data-grid-generator": "^7.3.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +21,7 @@
     "@types/react-dom": "^18.2.19",
     "axios": "^1.6.7",
     "blob": "^0.1.0",
+    "i": "^0.3.7",
     "install": "^0.13.0",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
